--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "next": "14.0.0",
+    "novel": "^0.1.22",
+    "openai": "^4.22.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
