--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.4",
     "@tiptap/extension-color": "^2.1.12",
     "@tiptap/extension-link": "^2.1.12",
@@ -29,7 +30,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "supabase": "^1.110.1",
+    "react-toastify": "^9.1.3",
+    "supabase": "^1.127.4",
     "swr": "^2.2.4"
   },
   "devDependencies": {
